mdaudiobook functional with makefile

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ output/
 *.m4a
 temp_audio/
 audio_chunks/
+mdaudiobook
 
 # =============================================================================
 # Virtual Environments
@@ -79,7 +80,7 @@ temp/
 # =============================================================================
 # API Keys and Secrets
 # =============================================================================
-.env
+.env1
 *.key
 *.pem
 credentials.json
