mdaudiobook update readme

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ MANIFEST
 # =============================================================================
 documents/*
 !documents/example.md
+!documents/Makefile
 
 # =============================================================================
 # Generated Output Files
