update ux for dev

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,10 @@ AZURE_SPEECH_KEY=your_azure_speech_key_here
 AZURE_SPEECH_REGION=eastus
 
 # Google Cloud Text-to-Speech
-GOOGLE_APPLICATION_CREDENTIALS=path/to/your/google-credentials.json
-GOOGLE_CLOUD_PROJECT=your_project_id
+# The installer will automatically detect a 'google-credentials.json' file in your
+# project root, copy it to the user config directory, and set the variables below.
+GOOGLE_APPLICATION_CREDENTIALS=
+GOOGLE_CLOUD_PROJECT=
 
 # OpenAI TTS (Recommended for high-quality audiobooks)
 OPENAI_API_KEY=your_openai_api_key_here
